Remove colors in text

--- a/paper/physical_authent.tex
+++ b/paper/physical_authent.tex
@@ -25,8 +25,9 @@
 
 %\usepackage{ulem}
 %\newcommand\add[1]{\textcolor{olive}{#1}} 
-\newcommand\del[1]{\textcolor{red}{#1}} 
-\newcommand\add[1]{\textcolor{blue}{#1}} 
+%\newcommand\del[1]{\textcolor{red}{#1}} 
+\newcommand\del[1]{} 
+\newcommand\add[1]{#1} 
 %\newcommand\rep[2]{\textcolor{red}{\sout{#1}}\textcolor{olive}{#2}}
 
 \usepackage{todonotes}
